--- a/components/footer.html
+++ b/components/footer.html
@@ -9,6 +9,8 @@
       Suivez-nous :
       <a href="https://www.facebook.com/Ludus.Mentis.Esport" target="_blank" rel="noopener" aria-label="Facebook">📘 Facebook</a>
     </p>
-    <p class="copyright">&copy; 2025 Ludus Mentis. Tous droits réservés.</p>
+    <p class="copyright">
+      &copy; 2025 Ludus Mentis. Tous droits réservés. · <a href="mentions.html">Mentions légales</a>
+    </p>
   </div>
 </footer>
